# pandorytool

./: .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  HISTORY.md  History.md  LICENSE.md  README.md  Readme.md  Supported_Roms.md  bosco.cfg  boscoo.cfg  build.sh  fedora-linuxbuild.sh  fedora-prepare.sh  fedora-prepare32.sh  fedora-winbuild.sh  fedora-winbuild32.sh  gui.glade  main.cpp  meson.build  mingw64.cmake  pandory.sh  rx_1898_update.sh  soldivid.cfg  update.sh  winbuild.sh
.github/ISSUE_TEMPLATE/: bug_report.md
OTA/: keys.f5e885b5ca2b1961b20e1e4c99411cd86b2e16a3241e5d1beb712324382fa1bf9e772bbed1f8f3317289a3f400e3d14105ca121c8630f4dcc84b5865fe46050c  pandory.sh
OTA/backup/: README.md
OTA/data/configs/: DataInstall.ini
controls/mame139/: btimem.cfg  captcomm.cfg  gangwars.cfg  indyheat.cfg  mk.cfg  mspacman.cfg  offroad.cfg  offroadt.cfg  umk3.cfg
docs/: .gitignore  Gemfile  SUPPORTED_ROMS.md  _config.yml  index.markdown
docs/_layouts/: default.html  post.html
docs/_posts/: 2020-02-24-pandory-trailer.markdown  2020-02-29-pandora-games-pandory-install-destination.markdown  2020-03-04-welcome-to-jekyll.markdown  2020-03-20-experimenting.markdown
fba/: fba.ini
jni/: Android.mk  Application.mk  main.cpp
mame139/: aburner.cfg  aburner2.cfg  asteroid.cfg  bbmanw.cfg  bosco.cfg  boscoo.cfg  btimem.cfg  btoads.cfg  captcomm.cfg  dynablst.cfg  galaga.cfg  galaga88.cfg  gangwars.cfg  gaunt2.cfg  gauntlet.cfg  gijoe.cfg  gwar.cfg  kof2000.cfg  kof2001.cfg  kof2003.cfg  kof96.cfg  kof97.cfg  kof98.cfg  kof99.cfg  lightbr.cfg  luckywld.cfg  mk.cfg  mk2.cfg  mk3.cfg  mslug2.cfg  mslug5.cfg  nbahangt.cfg  nbajam.cfg  nbajamte.cfg  offroadt.cfg  outrun.cfg  pdrift.cfg  polepos.cfg  qbert.cfg  rampage.cfg  (+9 more)
pandory/: autoexec.sh  dig  network.sh  pandory.sh  pandoryjailbreak  pandorykey
pandory/trimui/: copyfiles.sh  fbalist.txt
pandory/trimui/retroarch/: retroarch-core-options.cfg  retroarch.cfg
psp/: controls.ini
src/: CommandLineArguments.cpp  CommandLineArguments.h  Console.cpp  Console.h  ConsoleColour.cpp  ConsoleColour.h  EditionCheck.cpp  EditionCheck.h  EmulatorMapper.cpp  EmulatorMapper.h  FileSystem.cpp  FileSystem.h  Fs.cpp  Fs.h  Hash.cpp  Hash.h  McGamesAbstract.cpp  McGamesAbstract.h  McGamesTXT.cpp  McGamesTXT.h  McGamesXML.cpp  McGamesXML.h  ModeDXStick.cpp  ModeDXStick.h  ModeJailbreakStick.cpp  ModeJailbreakStick.h  PandoryTool.cpp  PandoryTool.h  ScrapeService.cpp  ScrapeService.h  ScreenScraper.cpp  ScreenScraper.h  ScreenScraperXML.cpp  ScreenScraperXML.h  StickDownloader.cpp  StickDownloader.h  StickExtractor.cpp  StickExtractor.h  SystemDefinition.cpp  SystemDefinition.h  (+6 more)
src/definitions/: DXPatches.cpp  DXPatches.h  PSPMapper.cpp  PSPMapper.h  Sticks.cpp  Sticks.h  StockPSPGames.cpp
src/modes/: ModeAdd.cpp  ModeAdd.h  ModePrepare.cpp  ModePrepare.h  ModePspStockfix.cpp  ModePspStockfix.h  ModePspfix.cpp  ModePspfix.h  ModeStick.cpp  ModeStick.h
src/tmp/: Buttons.cpp  Buttons.h  ExampleWindow.cpp  ExampleWindow.h  HelloWorld.cpp  HelloWorld.h  RadioButtons.cpp  RadioButtons.h
stub/: meson.build  pandory.c
tool/: main.cpp  meson.build
tool/etc/: !Pandory3D-Backup.bat  !Pandory3D.bat  !PandoryDX.bat  addroms.bat
tool/etc/controls/: README.md
tool/etc/controls/mame139/: aburner.cfg  astdelux.cfg  aztarac.cfg  captcomm.cfg  cclimber.cfg  chasehq.cfg  defender.cfg  ga2.cfg  galaga-b.cfg  galaxian.cfg  indyheat.cfg  kof2000-SF2.cfg  kof2002.cfg  kof94.cfg  kof95.cfg  mk2.cfg  mk3.cfg  moo.cfg  mslug.cfg  mslug3.cfg  mslug4.cfg  mslugx.cfg  mspacman.cfg  offroad.cfg  outrun.cfg  searchar.cfg  simpsons.cfg  simpsons2p.cfg  ssprint.cfg  superchs.cfg  tmht22pu.cfg  tmnt.cfg  tmnt2.cfg  toobin.cfg  xmen.cfg
tool/etc/documentation/: DISABLE_FEATURES.txt  HISTORY.txt  QUICK_START_GUIDE.txt  SUPPORTED_ROMS.txt
tool/etc/roms/32x/: README.txt
tool/etc/roms/dreamcast/: README.txt
tool/etc/roms/fba/: README.txt
tool/etc/roms/gb/: README.txt
tool/etc/roms/gba/: README.txt
tool/etc/roms/gbc/: README.txt
tool/etc/roms/mame139/: README.txt
tool/etc/roms/mame19/: README.txt
tool/etc/roms/mame37/: README.txt
tool/etc/roms/mame78/: README.txt
tool/etc/roms/mastersystem/: README.txt
tool/etc/roms/megadrive/: README.txt
tool/etc/roms/n64/: README.txt
tool/etc/roms/nes/: README.txt
tool/etc/roms/pcengine/: README.txt
tool/etc/roms/playstation/: README.txt
tool/etc/roms/psp/: README.txt
tool/etc/roms/snes/: README.txt
tool/etc/roms/wswan/: README.txt
tool/etc/scripts/pandory-android-start/: README.txt  pandory.sh
tool/include/: CommandLineArguments.h  Console.h  EditionCheck.h  Fs.h  Hash.h  McGamesAbstract.h  McGamesTXT.h  McGamesXML.h  PandoryTool.h  ScrapeService.h  ScreenScraper.h  ScreenScraperXML.h  StickDownloader.h  StickExtractor.h  SystemDefinition.h  SystemMapper.h  UserFolders.h  libarchive.h  types.h
tool/include/definitions/: DXPatches.h  PSPMapper.h  Sticks.h
tool/include/modes/: ModeAdd.h  ModeDXStick.h  ModeJailbreakStick.h  ModePrepare.h  ModePspfix.h  ModeStick.h
tool/src/: CommandLineArguments.cpp  Console.cpp  EditionCheck.cpp  Fs.cpp  Hash.cpp  McGamesAbstract.cpp  McGamesTXT.cpp  McGamesXML.cpp  PandoryTool.cpp  ScrapeService.cpp  ScreenScraper.cpp  ScreenScraperXML.cpp  StickDownloader.cpp  StickExtractor.cpp  SystemDefinition.cpp  SystemMapper.cpp  UserFolders.cpp
tool/src/definitions/: DXPatches.cpp  PSPMapper.cpp  Sticks.cpp
tool/src/modes/: ModeAdd.cpp  ModeDXStick.cpp  ModeJailbreakStick.cpp  ModePrepare.cpp  ModePspfix.cpp  ModeStick.cpp
